---
source: engine/crates/engine/query-solver/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#category\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"products\" ]\n    3 [ label = \"category\" ]\n    4 [ label = \"Root#name\", color=royalblue,shape=parallelogram ]\n    5 [ label = \"products\" ]\n    6 [ label = \"name\" ]\n    7 [ label = \"Root#price\", color=royalblue,shape=parallelogram ]\n    8 [ label = \"products\" ]\n    9 [ label = \"id\" ]\n    10 [ label = \"price\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 10 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 9 [ label = \"\" ]\n    5 -> 6 [ label = \"\" ]\n    0 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 8 [ label = \"\" ]\n    4 -> 5 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#category" ]
    2 [ label = "products" ]
    3 [ label = "category" ]
    4 [ label = "Root#name" ]
    5 [ label = "products" ]
    6 [ label = "name" ]
    7 [ label = "Root#price" ]
    8 [ label = "products" ]
    9 [ label = "id" ]
    10 [ label = "price" ]
    0 -> 1 [ label = "QueryPartition" ]
    8 -> 10 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "QueryPartition" ]
    8 -> 9 [ label = "Field" ]
    5 -> 6 [ label = "Field" ]
    0 -> 7 [ label = "QueryPartition" ]
    7 -> 8 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
}
